# instant-glicko-2

./: Cargo.toml  LICENSE  README.md
src/: algorithm.rs  algorithm2.rs  calculator.rs  constants.rs  engine.rs  lib.rs  model.rs  util.rs
